[package]
name = "rcheckbook"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
version = "0.3.0"
edition = "2018"
license = "MIT"
description = "CLI checkbook ledger that can help keep track of finances."
homepage = "https://github.com/bryceac/rcheckbook"
readme = "README.mediawiki"
repository = "https://github.com/bryceac/rcheckbook"
keywords = ["rcheckbook", "ledger", "cli", "commandline", "checkbook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcheck = "0.3"
shellexpand = "3.1.0"
clap = { version = "4.4.8", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
url_path = "0.1.3"
chrono = "0.4"