[package]
name = "rcheckbook"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
version = "0.4.4"
edition = "2021"
license = "MIT"
description = "CLI checkbook ledger that can help keep track of finances."
homepage = "https://github.com/bryceac/rcheckbook"
readme = "README.mediawiki"
repository = "https://github.com/bryceac/rcheckbook"
keywords = ["rcheckbook", "ledger", "cli", "commandline", "checkbook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcheck = "0.3"
shellexpand = "3.1.0"
clap = { version = "4.4.8", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
url_path = "0.1.3"
chrono = "0.4"
qif = "0.1"
spsheet = { git = "https://github.com/bryceac/spsheet-rs.git", features = ["ods", "xlsx"] }
calamine = "0.29.0"
spreadsheet-ods = "0.25.0"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """\
A simple CLI based checkbook ledger to help \
keep track of finances."""
section = "unknown"
priority = "optional"
assets = [
    ["target/release/rcheckbook", "usr/local/bin/", "755"],
    ["register.db", "opt/rcheckbook/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rcheckbook", dest = "/usr/local/bin/", mode = "755" },
    { source = "register.db", dest = "/opt/rcheckbook/", mode = "644" }
]
