[package]
name = "rcheckbook"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
version = "0.6.6"
edition = "2024"
license = "MIT"
description = "CLI checkbook ledger that can help keep track of finances."
homepage = "https://github.com/bryceac/rcheckbook"
readme = "README.mediawiki"
repository = "https://github.com/bryceac/rcheckbook"
keywords = ["rcheckbook", "ledger", "cli", "commandline", "checkbook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcheck = "0.4.1"
shellexpand = "3.1.1"
clap = { version = "4.5.45", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
url_path = "0.1.3"
chrono = "0.4"
qif = "0.1"
calamine = "0.30.0"
spreadsheet-ods = "0.25.1"
icu_locid = "1.5.0"
xlsxwriter = "0.6.1"
fastnum = "0.7.4"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """\
A simple CLI based checkbook ledger to help \
keep track of finances."""
section = "unknown"
priority = "optional"
assets = [
    ["target/release/rcheckbook", "usr/local/bin/", "755"],
    ["register.sql", "/usr/local/share/rcheckbook/", "644"],
    ["man/rcheckbook.1", "/usr/local/share/man/man1/", "644"],
    ["man/rcheckbook-add.1", "/usr/local/share/man/man1/", "644"],
    ["man/rcheckbook-export.1", "/usr/local/share/man/man1/", "644"],
    ["man/rcheckbook-import.1", "/usr/local/share/man/man1/", "644"],
    ["man/rcheckbook-list.1", "/usr/local/share/man/man1/", "644"],
    ["man/rcheckbook-remove.1", "/usr/local/share/man/man1/", "644"],
    ["man/rcheckbook-summary.1", "/usr/local/share/man/man1/", "644"],
    ["man/rcheckbook-update.1", "/usr/local/share/man/man1/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rcheckbook", dest = "/usr/local/bin/", mode = "755" },
    { source = "register.sql", dest = "/usr/local/share/rcheckbook/", mode = "644" },
    { source = "man/rcheckbook.1", dest = "/usr/local/share/man/man1/", mode = "644" },
    { source = "man/rcheckbook-add.1", dest = "/usr/local/share/man/man1/", mode = "644" },
    { source = "man/rcheckbook-export.1", dest = "/usr/local/share/man/man1/", mode = "644" },
    { source = "man/rcheckbook-import.1", dest = "/usr/local/share/man/man1/", mode = "644" },
    { source = "man/rcheckbook-list.1", dest = "/usr/local/share/man/man1/", mode = "644" },
    { source = "man/rcheckbook-remove.1", dest = "/usr/local/share/man/man1/", mode = "644" },
    { source = "man/rcheckbook-summary.1", dest = "/usr/local/share/man/man1/", mode = "644" },
    { source = "man/rcheckbook-update.1", dest = "/usr/local/share/man/man1/", mode = "644" }
]
